<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="about_text">To Do List\nv. 1.0\n2012 \u00A9 Rouslan Placella</string>
    <string name="add">Add</string>
    <string name="add_hint">Select the type of note you wish to create</string>
    <string name="additem">Add Item</string>
    <string name="addlist">Add List</string>
    <string name="addnote">Add Note</string>
    <string name="app_name">To Do List</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure you want to delete this item?</string>
    <string name="dberror">A fatal database error has occurred</string>
    <string name="delete">Delete</string>
    <string name="description">Content</string>
    <string name="dummy"></string>
    <string name="edit">Edit</string>
    <string name="editlist">Edit List</string>
    <string name="editnote">Edit Note</string>
    <string name="list">List</string>
    <string name="menu_settings">Settings</string>
    <string name="new_hint">Press the menu button to add a new note</string>
    <string name="no_items">No items found&#8230;</string>
    <string name="noitems">No Items found, click \&quot;Add Item\&quot; to create a new item</string>
    <string name="noname">{No name}</string>
    <string name="note_description">Enter the contents of your note here</string>
    <string name="note">Simple Note</string>
    <string name="notify">You will be notified when the synchronisation has completed</string>
    <string name="ok">OK</string>
    <string name="PLACEHOLDER">PLACEHOLDER</string>
    <string name="sync_failed_full">Tap here to see why</string>
    <string name="sync_failed">Synchronisation Failed</string>
    <string name="sync_failed_title">Synchronisation of \'To Do List\' failed</string>
    <string name="sync_ok_full">Tap here to get the link to your notes</string>
    <string name="sync_ok">Synchronisation Successful</string>
    <string name="sync_ok_title">\'To Do List\' successfully synchronised</string>
    <string name="sync">Synchronise</string>
    <string name="title">Title</string>
    <string name="view">View</string>
</resources>